--- a/Csr/index.html
+++ b/Csr/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang Web Dự Án Cuối Cùng</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -11,15 +13,18 @@
             margin: 0;
             padding: 0;
         }
+
         main {
             padding: 20px;
         }
+
         img {
             max-width: 100%;
             height: auto;
         }
     </style>
 </head>
+
 <body>
     <header>
         <h1>Chào Mừng Đến Với Trang Web Của Tôi</h1>
@@ -27,13 +32,12 @@
     <main>
         <section>
             <h2>Giới Thiệu</h2>
-            <p>Đây là dự án cuối cùng của tôi. Trong trang web này, tôi sẽ giới thiệu về bản thân và những điều tôi yêu thích.</p>
+            <p>Đây là dự án cuối cùng của tôi. Trong trang web này, tôi sẽ giới thiệu về bản thân và những điều tôi yêu
+                thích.</p>
         </section>
         <section>
             <h2>Hình Ảnh</h2>
-            <img src="image1.jpg" alt="Mô tả hình ảnh 1">
-            <img src="https://example.com/image2.jpg" alt="Mô tả hình ảnh 2">
-            <img src="https://example.com/image3.jpg" alt="Mô tả hình ảnh 3">
+            <img src="images.jpg" alt="Mô tả hình ảnh 1">
         </section>
         <section>
             <h2>Danh Sách Những Điều Tôi Yêu Thích</h2>
@@ -45,11 +49,13 @@
         </section>
         <section>
             <h2>Tham Khảo</h2>
-            <p>Để biết thêm thông tin, vui lòng truy cập <a href="https://www.example.com" target="_blank">Trang Web Tham Khảo</a>.</p>
+            <p>Để biết thêm thông tin, vui lòng truy cập <a href="https://uwowocosplay.com/products/uwowo-collab-series-game-lol-league-of-legends-gwen-cosplay-costume" target="_blank">Trang Web
+                    Tham Khảo</a>.</p>
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Cậu chủ. All rights reserved.</p>
+        <p>&copy; 2024 Hoàng Đức Lương. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
